# nyc-taxi-etl-pyspark

./: .gitignore  DESIGN.md  Makefile  README.md  main.py  pyproject.toml  requirement_dev.txt  requirements.txt
.github/workflows/: ci.yml
conf/: emr_serverless_job.json  spark_conf.py
jobs/: analytics_job.py  ingest_job.py  transform_job.py
misc/: s3_data_copy.py
scripts/: bootstrap.sh  submit_job.sh
src/: __init__.py  config.py
src/analytics/: __init__.py  demand_analysis.py  fare_analysis.py  geo_analysis.py  time_series.py  trip_patterns.py
src/ingestion/: __init__.py  reader.py  schema.py
src/transformation/: __init__.py  bronze.py  gold.py  silver.py
src/utils/: __init__.py  logger.py  spark_session.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_bronze.py  test_gold.py  test_silver.py
