[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nyc-taxi-etl-pyspark"
version = "1.0.0"
description = "NYC Taxi Trip ETL & Analytics Pipeline on Amazon EMR Serverless"
requires-python = ">=3.10"
dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.1.0",
    "boto3>=1.34.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "build>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "jobs*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v"



